<resources>
    <string name="app_name">Flashcard-app</string>
    <string name="word">word</string>
    <string name="submit">Submit</string>
    <string name="palabra">Palabra</string>
    <string name="add_card">card</string>
    <string name="create_card">create</string>
    <string name="add_english">Add English</string>
    <string name="add_translation">Add Translation</string>
    <string name="correct_responses">Correct Responses</string>
    <string name="_0">0</string>
</resources>